Spelling: Entitites -> Entities

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -178,7 +178,7 @@
           document.getElementById('object-placeholder-cp').textContent = 
             commonParents.target_id + '@' + commonParents.target_ns;
           cpTableBody = document.getElementById('query-results-cp');
-          document.getElementById('npaths-cp').textContent = 'Entitites: ' + commonParents.common_parents.length;
+          document.getElementById('npaths-cp').textContent = 'Entities: ' + commonParents.common_parents.length;
           for (par of commonParents.common_parents) {
             let newRow = document.createElement('tr');
 
