Hide yet-to-be implemented option

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -120,7 +120,7 @@
         sign: document.getElementById('sign-dd').value,
         weighted: document.getElementById('weighted-search').checked,
         bsco: beliefEntry,
-        direct_only: document.getElementById('direct-only').checked,
+        // direct_only: document.getElementById('direct-only').checked,
         curated_db_only: document.getElementById('curated-db-only').checked,
         fplx_expand: document.getElementById('fplx-expand').checked,
         k_shortest: kShortestEntry
@@ -418,10 +418,10 @@
           </select>&nbsp;&nbsp;Sign</label>
         </div>
       </div>
-      <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="direct-only" disabled>
-        <label class="custom-control-label" for="direct-only">Direct only</label>
-      </div>
+<!--      <div class="custom-control custom-checkbox">-->
+<!--        <input type="checkbox" class="custom-control-input" id="direct-only" disabled>-->
+<!--        <label class="custom-control-label" for="direct-only">Direct only</label>-->
+<!--      </div>-->
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="weighted-search">
         <label class="custom-control-label" for="weighted-search">Weighted search</label>
