Linkout to refresh rest API endpoint

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -34,7 +34,8 @@
   <!-- custom scripts -->
   <script type="text/javascript">
     const SUBMIT_URL = 'http://localhost:5000/query/submit';
-    const INDRA_DB_URL_HASH = 'https://db.indra.bio/statements/from_hash/';
+    // const INDRA_DB_URL_HASH = 'https://db.indra.bio/statements/from_hash/';
+    const INDRA_DB_URL_HASH = 'https://beg6vcyssj.execute-api.us-east-1.amazonaws.com/dev/statements/from_hash/';
     const MAX_K_PATHS = 50;
     const stmtOptions = ['Acetylation', 'Activation', 'ActiveForm', 'Autophosphorylation',
       'Complex', 'Conversion', 'Deacetylation', 'DecreaseAmount', 'Deglycosylation',
