Activate filter for DBs

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -439,7 +439,7 @@
         <label class="custom-control-label" for="weighted-search">Weighted search</label>
       </div>
       <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="curated-db-only" disabled>
+        <input type="checkbox" class="custom-control-input" id="curated-db-only">
         <label class="custom-control-label" for="curated-db-only">Curated databases only</label>
       </div>
       <div class="custom-control custom-checkbox">
