Spelling #2: Entitites -> Entities

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -494,7 +494,7 @@
             Complexes and Families (<span id="subject-placeholder-cp" class="placholder subject-placeholder">A</span> -
               <span id="object-placeholder-cp" class="placholder object-placeholder">B</span>)
           </a>
-          <span id="npaths-cp" class="badge badge-primary badge-pill float-right path-count">Entitites: 0</span>
+          <span id="npaths-cp" class="badge badge-primary badge-pill float-right path-count">Entities: 0</span>
         </h3>
       </div>
       <div id="collapse-paths-cp" class="collapse">
