Hide sign option, remove from sent json

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -108,7 +108,7 @@
         node_filter: nodeFilterList,
         node_blacklist: nodeBlackList,
         path_length: parseInt(document.getElementById('path-length').value) || false,
-        sign: document.getElementById('sign-dd').value,
+        // sign: document.getElementById('sign-dd').value,
         weighted: document.getElementById('weighted-search').checked,
         bsco: beliefEntry,
         // direct_only: document.getElementById('direct-only').checked,
@@ -441,15 +441,15 @@
           </div>&nbsp;&nbsp;Belief Score cut-off (0 to 1)</label>
         </div>
       </div>
-      <div class="row">
-        <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">
-          <label><select id="sign-dd" disabled>
-            <option selected="selected" value="no_sign">No sign</option>
-            <option value="plus">+</option>
-            <option value="minus">-</option>
-          </select>&nbsp;&nbsp;Sign</label>
-        </div>
-      </div>
+<!--      <div class="row">-->
+<!--        <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">-->
+<!--          <label><select id="sign-dd" disabled>-->
+<!--            <option selected="selected" value="no_sign">No sign</option>-->
+<!--            <option value="plus">+</option>-->
+<!--            <option value="minus">-</option>-->
+<!--          </select>&nbsp;&nbsp;Sign</label>-->
+<!--        </div>-->
+<!--      </div>-->
 <!--      <div class="custom-control custom-checkbox">-->
 <!--        <input type="checkbox" class="custom-control-input" id="direct-only" disabled>-->
 <!--        <label class="custom-control-label" for="direct-only">Direct only</label>-->
