Replace "settings unavailable" message

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -474,7 +474,7 @@
     </form>
   </div>
   <div class="container">
-    <p><i id="query-status">Some settings are currently unavailable</i></p>
+    <p><i id="query-status">Waiting for query</i></p>
   </div>
 
   <div id="table-area" class="container">
