--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -438,7 +438,7 @@
         <div class="col">
           <label style="margin: 0px;"><div class="container" style="width: 90px; float: left; padding: 0px;">
             <input class="form-control" type="number" step="0.01" name="belief_cutoff" id="belief-cutoff" min="0" max="1">
-          </div>&nbsp;&nbsp;Belief Score cut-off (0 to 1)</label>
+          </div>&nbsp;Belief Score cut-off (0 to 1), higher is better</label>
         </div>
       </div>
 <!--      <div class="row">-->
