--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -460,7 +460,7 @@
       </div>
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="curated-db-only">
-        <label class="custom-control-label" for="curated-db-only">Curated databases only</label>
+        <label class="custom-control-label" for="curated-db-only">Databases only</label>
       </div>
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="fplx-edges">
