--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -401,7 +401,7 @@
           <div class="container" style="width: 185px; float: left; padding: 0px;">
             <input class="form-control" type="number" step="1" name="path_length" id="path-length" min="0" max="10"
                    placeholder="Number of edges"
-                   title="Only search for paths with the specified number of edges. Set to 0 to exclude directed path search completely. An empty value allows any number of edges.">
+                   title="Only search for paths with the specified number of edges. An empty value allows any number of edges.">
           </div>
         </div>
         <div class="col">
