--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -356,7 +356,7 @@
       border: #007bff;
     }
 
-    /* Badge color coding */
+    /* Badge color coding from colorbrewer2.org */
     /* Readers */
     .source-medscan {color: white; background-color: #7fc97f}
     .source-rlimsp {color: white; background-color: #beaed4}
@@ -400,7 +400,7 @@
         <div class="col">
           <div class="container" style="width: 185px; float: left; padding: 0px;">
             <input class="form-control" type="number" step="1" name="path_length" id="path-length" min="0" max="10"
-                   placeholder="Number of edges"
+                   placeholder="Path length"
                    title="Only search for paths with the specified number of edges. An empty value allows any number of edges.">
           </div>
         </div>
