Improve description of cull nodes feature on web interface

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -453,9 +453,8 @@
         </div>
         <div class="col">
           <input type="text" id="cull-best-node" class="form-control"
-            title="Every x valid paths, cull the node with the highest (weighted) degree from the network. This increases the
-            variety of paths found and reduces the impact of nodes with extremely high connectivity in the network."
-            placeholder="Cull every # paths"
+            title="Every x valid paths, cull the node with the highest (weighted) degree from the network. This increases the variety of paths found and reduces the impact of nodes with extremely high connectivity in the network."
+            placeholder="Cull highest degree node every # paths"
           >
         </div>
       </div>
