--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -172,9 +172,12 @@
         let pathsKeyedArrayForward = data.result.paths_by_node_count.forward;
         let pathsKeyedArrayBackward = data.result.paths_by_node_count.backward;
         let simpleCommonTargets = data.result.common_targets;
+        var tableArea = document.getElementById('table-area');
 
         // Fill common parents table
         if (data.result.common_parents.common_parents.length > 0) {
+          let cardHtml = generateCommonParents();
+          tableArea.appendChild(cardHtml);
           document.getElementById('subject-placeholder-cp').textContent = 
             commonParents.source_id + '@' + commonParents.source_ns;
           document.getElementById('object-placeholder-cp').textContent = 
@@ -199,6 +202,8 @@
 
         // Fill common targets table
         if (simpleCommonTargets && simpleCommonTargets.length > 0) {
+          let cardHtml = generateCommonTargets();
+          tableArea.appendChild(cardHtml);
           let ctTableBody = document.getElementById('query-results-common-targets');
           document.getElementById('common-targets').textContent = 'Targets: ' +
             simpleCommonTargets.length;
@@ -225,7 +230,6 @@
 
         // Fill directed paths tables
         if (pathsKeyedArrayForward && Object.keys(pathsKeyedArrayForward).length > 0) {
-          var tableArea = document.getElementById('table-area');
           for (len in pathsKeyedArrayForward) {
             let cardHtml = generateCardTable(len-1, 'f');
             tableArea.appendChild(cardHtml);
@@ -287,12 +291,8 @@
     }
 
     function clearAllTables() {
-      // Delete cards for paths by length
-      $('.directed-path').remove();
-      // Clear existing tables
-      for (tb of document.getElementsByClassName('table-body')) {
-        tb.innerHTML = null;
-      }
+      // Delete cards
+      $('.card').remove();
     }
 
     function resetCounters() {
@@ -385,7 +385,7 @@
       }
 
       let newCard = document.createElement('div');
-      newCard.className = 'card directed-path';
+      newCard.className = 'card';
       newCard.innerHTML = '<div class="card-header"><h3 class="display-7"><a href="#" class="stmt_toggle" ' +
         'data-toggle="collapse" data-target="#collapse-paths-' + len + dir + ' " aria-expanded="false" ' +
         'aria-controls="collapse-paths-' + len + dir + '"> ' + len + ' Edge Paths (<div id="subject-placeholder-' +
@@ -398,6 +398,37 @@
       return newCard;
     }
 
+    function generateCommonParents() {
+      let newCard = document.createElement('div');
+      newCard.className = 'card';
+      newCard.innerHTML = '<div class="card-header"><h3 class="display-7"><a href="#" class="stmt_toggle" ' +
+        'data-toggle="collapse" data-target="#collapse-paths-cp" aria-expanded="false" ' +
+        'aria-controls="collapse-paths-cp">Complexes and Families (<span id="subject-placeholder-cp" ' +
+        'class="placholder subject-placeholder">A</span> - <span id="object-placeholder-cp" class="placholder ' +
+        'object-placeholder">B</span>)</a><span id="npaths-cp" class="badge badge-primary badge-pill float-right ' +
+        'path-count">Entities: 0</span></h3></div><div id="collapse-paths-cp" class="collapse">' +
+        '<div class="card-body"><table class="table"><thead class="table-head"><th>Family/Complex</th>' +
+        '<th>Namespace</th></thead><tbody class="table-body" id="query-results-cp"></tbody></table></div></div>';
+
+      return newCard;
+    }
+
+    function generateCommonTargets() {
+      let newCard = document.createElement('div');
+      newCard.className = 'card';
+      newCard.innerHTML = '<div class="card-header"><h3 class="display-7"><a href="#" class="stmt_toggle" ' +
+        'data-toggle="collapse" data-target="#collapse-common-targets" aria-expanded="false" ' +
+        'aria-controls="collapse-common-targets"> Common Targets (<span id="subject-placeholder-ct" ' +
+        'class="placholder subject-placeholder">A</span>&rarr;Z&larr;<span id="object-placeholder-ct" '+
+        'class="placholder object-placeholder">B</span>)</a><span id="common-targets" class="badge badge-primary ' +
+        'badge-pill float-right path-count">Targets: 0</span></h3></div><div id="collapse-common-targets" ' +
+        'class="collapse"><div class="card-body"><table class="table"><thead class="table-head"><th>Target ' +
+        '(Z)</th><th>Support</th></thead><tbody class="table-body" id="query-results-common-targets"></tbody>' +
+        '</table></div></div>';
+
+      return newCard;
+    }
+    
   </script>
   <style>
     h3 a.stmt_toggle {
@@ -556,61 +587,9 @@
 
   <div id="table-area" class="container">
     <h2 class="display-6">Search Results</h2>
-    <!-- Common parents complexes and families -->
+
     <div class="card">
-      <div class="card-header">
-        <h3 class="display-7">
-          <a href="#"
-             class="stmt_toggle"
-             data-toggle="collapse"
-             data-target="#collapse-paths-cp"
-             aria-expanded="false" 
-             aria-controls="collapse-paths-cp">
-            Complexes and Families (<span id="subject-placeholder-cp" class="placholder subject-placeholder">A</span> -
-              <span id="object-placeholder-cp" class="placholder object-placeholder">B</span>)
-          </a>
-          <span id="npaths-cp" class="badge badge-primary badge-pill float-right path-count">Entities: 0</span>
-        </h3>
-      </div>
-      <div id="collapse-paths-cp" class="collapse">
-        <div class="card-body">
-          <table class="table">
-            <thead class="table-head">
-              <th>Family/Complex</th>
-              <th>Namespace</th>
-            </thead>
-            <tbody class="table-body" id="query-results-cp"></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <!-- Common Targets -->
-    <div class="card">
-      <div class="card-header">
-        <h3 class="display-7">
-          <a href="#"
-             class="stmt_toggle"
-             data-toggle="collapse"
-             data-target="#collapse-common-targets"
-             aria-expanded="false"
-             aria-controls="collapse-common-targets">
-            Common Targets (<span id="subject-placeholder-ct" class="placholder subject-placeholder">A</span>&rarr;Z&larr;<span
-              id="object-placeholder-ct" class="placholder object-placeholder">B</span>)
-          </a>
-          <span id="common-targets" class="badge badge-primary badge-pill float-right path-count">Targets: 0</span>
-        </h3>
-      </div>
-      <div id="collapse-common-targets" class="collapse">
-        <div class="card-body">
-          <table class="table">
-            <thead class="table-head">
-              <th>Target (Z)</th>
-              <th>Support</th>
-            </thead>
-            <tbody class="table-body" id="query-results-common-targets"></tbody>
-          </table>
-        </div>
-      </div>
+
     </div>
     <!-- Dynamic tables -->
   </div>
