--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -22,9 +22,11 @@
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 
   <!-- custom scripts -->
+<!--  <script src="http://localhost:8080/netSearch.js"></script>-->
   <script type="text/javascript">
     const SUBMIT_URL = 'http://localhost:5000/query/submit';
     const INDRA_DB_URL_HASH = 'https://db.indra.bio/statements/from_hash/';
+    const INDRA_DB_URL_AGENTS = 'https://db.indra.bio/statements/from_agents?format=html&';
     const MAX_K_PATHS = 50;
     const stmtOptions = ['Acetylation', 'Activation', 'ActiveForm', 'Autophosphorylation',
       'Complex', 'Conversion', 'Deacetylation', 'DecreaseAmount', 'Deglycosylation',
@@ -141,6 +143,7 @@
           switch (xhr.status) {
             case 200:
               break;
+            // ToDo Add more messages for different HTML errors
             default:
               console.log('Submission error: check ajax response');
               statusBox.textContent = 'Error: ' + xhr.status + ': ' + xhr.responseText;
@@ -178,13 +181,13 @@
         if (data.result.common_parents.common_parents.length > 0) {
           let cardHtml = generateCommonParents();
           tableArea.appendChild(cardHtml);
-          document.getElementById('subject-placeholder-cp').textContent = 
-            commonParents.source_id + '@' + commonParents.source_ns;
-          document.getElementById('object-placeholder-cp').textContent = 
-            commonParents.target_id + '@' + commonParents.target_ns;
-          cpTableBody = document.getElementById('query-results-cp');
+          document.getElementById('subject-placeholder-cp').textContent =
+            `${commonParents.source_id} @${commonParents.source_ns}`;
+          document.getElementById('object-placeholder-cp').textContent =
+            `${commonParents.target_id} @${commonParents.target_ns}`;
+          let cpTableBody = document.getElementById('query-results-cp');
           document.getElementById('npaths-cp').textContent = 'Entities: ' + commonParents.common_parents.length;
-          for (par of commonParents.common_parents) {
+          for (let par of commonParents.common_parents) {
             let newRow = document.createElement('tr');
 
             let newIdCol = document.createElement('td');
@@ -230,7 +233,7 @@
 
         // Fill directed paths tables
         if (pathsKeyedArrayForward && Object.keys(pathsKeyedArrayForward).length > 0) {
-          for (len in pathsKeyedArrayForward) {
+          for (let len in pathsKeyedArrayForward) {
             let cardHtml = generateCardTable(len-1, 'f');
             tableArea.appendChild(cardHtml);
             // cardHtml.getElementById('npaths-' + (len-1)).textContent = 'Paths: ' + pathsKeyedArrayForward[len].length;
@@ -241,7 +244,7 @@
             cardHtml.getElementsByClassName('object-placeholder')[0].textContent = target;
             // let tableBody = cardHtml.getElementById('query-results-' + (len-1));
             let tableBody = cardHtml.getElementsByClassName('table-body')[0];
-            for (pathArray of pathsKeyedArrayForward[len]) {
+            for (let pathArray of pathsKeyedArrayForward[len]) {
               let newRow = document.createElement('tr');
               // Add current path
               let newPath = document.createElement('td');
@@ -326,54 +329,80 @@
     }
 
     // Function to put stmts from path in a HTML format with linkouts
-    function generatePathLinkout(stmtsArray) {
+    function generatePathLinkout(pathArray) {
       // Build an html string of the paths
-      // stmtsArray is a list of lists:
-      // stmtsArray[i] gives edge i
-      // stmtsArray[i][j] gives stmt j of edge i
+      // pathArray is a list of dicts for each edge in the path:
+      // pathArray[i] gives a dict for the support of edge i
+      // pathArray[i][stmt type j] is a list of all statements of type j supporting edge i
+      // pathArray[i][stmt type j][k] is statement k of type j supporting edge i
       let htmlString = '';
-      for (edgeList of stmtsArray) {
-        if (edgeList.length > 0) {
-          htmlString += '<h5><b>' + edgeList[0].subj + ' &rarr; ' + edgeList[0].obj +
-          '</b><span class="float-right">Support:' + edgeList.length + '</span></h5>';
-          for (stmt of edgeList) {
-            let dbLink = '';
-            if (stmt.stmt_hash.startsWith('http')) dbLink = stmt.stmt_hash;
-            else dbLink = INDRA_DB_URL_HASH + stmt.stmt_hash + '?format=html';
-            let sourceBadges = generateSourceBadges(stmt);
-            htmlString += '<a href="' + dbLink + '" target="_blank">' + stmt.subj + ', ' + 
-              stmt.stmt_type + ', ' + stmt.obj + '</a>' + sourceBadges + '<br>'
+      for (let edgeDict of pathArray) {
+        if (Object.keys(edgeDict).length > 0) {
+          let subj = edgeDict.subj;
+          let obj = edgeDict.obj;
+          htmlString += `<h5><b>${subj} &rarr; ${obj}</b><span class="float-right">Statement types: ${(Object.keys(edgeDict).length-2).toString()}</span></h5>`;
+          for (let stmt_type in edgeDict) {
+            if ((stmt_type !== 'subj') && (stmt_type !== 'obj')) {
+              // let dbLink = '';
+              // if (stmt.stmt_hash.startsWith('http')) dbLink = stmt.stmt_hash;
+              // ?subject=BRCA1&object=BRCA2&type=activation&ev_limit=1
+              let agentsString = '';
+              if (stmt_type.toLowerCase() === 'complex') agentsString = `agent0=${subj}&agent1=${obj}&`;
+              else agentsString = `subject=${subj}&object=${obj}&`;
+              let dbLink = INDRA_DB_URL_AGENTS + agentsString + `type=${stmt_type}&ev_limit=1`;
+              let sourceBadges = generateSourceBadges(edgeDict[stmt_type]);
+              htmlString += '<a href="' + dbLink + '" target="_blank">' + subj + ', ' +
+                stmt_type + ', ' + obj + '</a>' + sourceBadges + '<br>'
+            }
           }
         }
       }
       return htmlString.substring(0, htmlString.length-4); // Cut out the last <br>
     }
 
-    function generateSourceBadges(stmt) {
+    function generateSourceBadges(stmt_list) {
+      // ToDo Add upp source counts in source dict
+      let all_source_counts = {};
+      for (let stmt of stmt_list) {
+        let source_counts = stmt.source_counts;
+        for (let source in source_counts) {
+          if (all_source_counts[source]) all_source_counts[source] += source_counts[source];
+          else all_source_counts[source] = source_counts[source];
+        }
+      }
       let htmlString = '';
       let badgeStart = '<span class="badge badge-secondary badge-pill float-right ';
       let badgeEnd = '</span>';
-      for (source in stmt.source_counts) {
-        htmlString += badgeStart + 'source-'+ source + '">' + source + ': ' + stmt.source_counts[source].toString() + badgeEnd
+      for (let source in all_source_counts) {
+        htmlString += badgeStart + 'source-'+ source + '">' + source + ': ' + all_source_counts[source].toString() + badgeEnd
       }
       return htmlString
     }
 
     function generateTargetLinkout(pathPair) {
       let htmlString = '';
-      for (path of pathPair) {
-        htmlString += '<h5><b>' + path[0].subj + ' &rarr; ' + path[0].obj +
-        '</b><span class="float-right">Support: ' + path.length + '</span></h5>';
-        for (stmt of path) {
-          let dbLink = '';
-          if (stmt.stmt_hash.startsWith('http')) dbLink = stmt.stmt_hash;
-          else dbLink = INDRA_DB_URL_HASH + stmt.stmt_hash + '?format=html';
-          let sourceBadges = generateSourceBadges(stmt)
-          htmlString += '<a href="' + dbLink + '" target="_blank">' + stmt.subj + ', ' + 
-            stmt.stmt_type + ', ' + stmt.obj + '</a>' + sourceBadges + '<br>'
+      for (let paths of pathPair) {
+        for (let path of paths) {
+          let subj = path.subj;
+          let obj = path.obj;
+          htmlString += `<h5><b>${subj} &rarr; ${obj}</b><span class="float-right">Support: ${(Object.keys(path).length-2).toString()} + </span></h5>`;
+          for (let stmt_type in path) {
+            if ((stmt_type !== 'subj') && (stmt_type !== 'obj')) {
+              // let dbLink = '';
+              // if (stmt.stmt_hash.startsWith('http')) dbLink = stmt.stmt_hash;
+              // else dbLink = INDRA_DB_URL_HASH + stmt.stmt_hash + '?format=html';
+              let agentsString = '';
+              if (stmt_type.toLowerCase() === 'complex') agentsString = `agent0=${subj}&agent1=${obj}&`;
+              else agentsString = `subject=${subj}&object=${obj}&`;
+              let dbLink = INDRA_DB_URL_AGENTS + agentsString + `type=${stmt_type}&ev_limit=1`;
+              let sourceBadges = generateSourceBadges(path[stmt_type]);
+              htmlString += '<a href="' + dbLink + '" target="_blank">' + subj + ', ' +
+                stmt_type + ', ' + obj + '</a>' + sourceBadges + '<br>'
+            }
+          }
         }
       }
-      return htmlString.substring(0, htmlString.length-4); // Cut out the last <br> 
+      return htmlString.substring(0, htmlString.length-4); // Cut out the last <br>
     }
 
     function generateCardTable(len, dir) {
@@ -428,7 +457,6 @@
 
       return newCard;
     }
-    
   </script>
   <style>
     h3 a.stmt_toggle {
